--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,17 +8,19 @@ permissions:
 
 jobs:
   check-version:
-    name: "Check Version & Branch"
-    runs-on: "ubuntu-latest"
+    name: Check Version & Branch
+    runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.check_version.outputs.version }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
+        with:
+          fetch-tags: true
 
-      - name: "Install Rust"
+      - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: "Verify Workspace Versions"
+      - name: Verify Workspace Versions
         id: check_version
         shell: bash
         run: |
@@ -40,7 +42,7 @@ jobs:
           echo "All crates match version: $VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      - name: "Check if Tag already exists"
+      - name: Check if Tag already exists
         run: |
           TAG="v${{ steps.check_version.outputs.version }}"
           if git rev-parse "$TAG" >/dev/null 2>&1; then
@@ -49,64 +51,68 @@ jobs:
           fi
 
   build:
-    name: "Build for ${{ matrix.os }}"
+    name: Build for ${{ matrix.os }}
     needs: check-version
-    runs-on: "${{ matrix.os }}"
+    runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: true
       matrix:
         os:
-          - "ubuntu-latest"
-          - "windows-latest"
-          - "macos-latest"
+          - ubuntu-latest
+          - windows-latest
+          - macos-latest
 
     steps:
-      - name: "Checkout source code"
-        uses: actions/checkout@v4
+      - name: Checkout source code
+        uses: actions/checkout@v6
 
-      - name: "Setup stable toolchain"
+      - name: Setup stable toolchain
         uses: dtolnay/rust-toolchain@stable
 
-      - name: "Use Rust cache"
-        uses: "Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5" # v2.8.2
+      - name: Use Rust cache
+        uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5 # v2.8.2
         with:
           cache-on-failure: true
 
-      - name: "Build Workspace"
+      - name: Build Workspace
         run: |
           cargo build --workspace --all-targets
 
   create-release:
-    name: "Create Release"
-    runs-on: "ubuntu-latest"
+    name: Create Release
+    runs-on: ubuntu-latest
     needs: [check-version, build]
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
+        with:
+          ref: ${{ github.sha }}
 
-      - name: "Create GitHub Release"
+      - name: Create GitHub Release
         uses: taiki-e/create-gh-release-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           changelog: CHANGELOG.md
-          allow-missing-changelog: true
+          allow-missing-changelog: false
           title: ${{ needs.check-version.outputs.version }}
-          ref: refs/tags/${{ needs.check-version.outputs.version }}
+          ref: ${{ github.sha }}
 
   publish-crates:
-    name: "Publish to Crates.io"
+    name: Publish to Crates.io
     needs: create-release
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.sha }}
 
-      - name: "Setup Rust"
+      - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: "Login to Crates.io"
+      - name: Login to Crates.io
         run: cargo login ${{ secrets.CRATES_IO_API_TOKEN }}
 
-      - name: "Publish Crates (Ordered)"
+      - name: Publish Crates (Ordered)
         shell: bash
         run: |
           # Sleep function to handle eventual consistency on crates.io
@@ -145,4 +151,5 @@ jobs:
 
           echo "Publishing: Main Crate"
           cargo publish -p starknet-rust
+
 
