--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,6 @@ jobs:
       version: ${{ steps.check_version.outputs.version }}
     steps:
       - uses: actions/checkout@v6
-        with:
-          fetch-tags: true
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
@@ -45,8 +43,8 @@ jobs:
       - name: Check if Tag already exists
         run: |
           TAG="${{ steps.check_version.outputs.version }}"
-          if git rev-parse "$TAG" >/dev/null 2>&1; then
-            echo "Error: Tag $TAG already exists. Please bump Cargo.toml first."
+          if [ -n "$(git ls-remote --tags origin refs/tags/$TAG)" ]; then
+            echo "Error: Tag $TAG already exists on remote 'origin'. Please bump Cargo.toml first."
             exit 1
           fi
 
@@ -151,5 +149,6 @@ jobs:
 
           echo "Publishing: Main Crate"
           cargo publish -p starknet-rust
+
 
 
